--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 *.html
 *.mp4
 *.mov
+Images_ARU_vascular1/Aortic2.mov
+*.mov
+Images_ARU_vascular1/Aortic2.mov
+Images_ARU_vascular1/AorticClip1.mp4
