--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 
-*.html
 *.mp4
 *.mov
-Images_ARU_vascular1/Aortic2.mov
-*.mov
-Images_ARU_vascular1/Aortic2.mov
-Images_ARU_vascular1/AorticClip1.mp4
+*.png
+*.jpeg
+*.jpg
